Changes since version 3.0.1
---------------------------

- Peformance improvements if an AMI callback object is reused with the
  same proxy.

- If several proxies share the same connection, and an operation call
  on one of the proxies causes a failure and the shared connection to
  be closed, then subsequent calls on the other proxies will try to
  establish a new connection instead of throwing an exception, even if
  retries are disabled.

- IcePatch2 now performs incremental reads of files during compression
  and checksum calculation. Previously the entire file being processed
  was read into memory.

- If a proxy is not configured with the -h parameter, Ice will now
  attempt to connect using all local interfaces. The loopback
  interface (127.0.0.1) will only be tried if it is the only local
  interface present.

- Added the ability to specify alternate mappings for Slice sequences
  other than std::vector. Please see the Ice manual for more details.

- Fixed a bug in slice2cpp that caused one-shot constructors for
  classes to incorrectly initialize base classes for class hierarchies
  three or more levels deep.

- Fixed a bug in slice2cpp that caused a compiler warning about an
  unused parameter in the generated code for operations on classes
  with void return type, no parameters, and no exception
  specification.

- Fixed a bug in the IceGrid deployment mechanism that would prevent
  the use of a variable in an object identity's category.

- Added Glacier2::Router::getCategoryForClient that should be used to
  get the category for Glacier2 client callback objects. This
  operation is a convenience that replaces the equivalent code
  getServerProxy()->ice_getIdentity().category.

- The Glacier2 router now forwards the context set by the client when
  calling PermissionsVerifier::checkPermissions and
  SessionManager::create.

- Fixed a bug in IceBox and IceGrid that would prevent running IceBox
  servers from a directory containing spaces.
