@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Wed Feb  8 17:24:02 2006
+// Generated by makeprops.py from file `../config/PropertyNames.def', Tue Mar  7 15:44:07 2006
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -71,7 +71,6 @@ const char* IceInternal::PropertyNames::IceProps[] =
     "Ice.Warn.Datagrams",
     "Ice.Warn.Dispatch",
     "Ice.Warn.Endpoints",
-    "Ice.Warn.Leaks",
     0
 };
 
